--- a/NodeJS/day01/package.json
+++ b/NodeJS/day01/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "my_test",
-  "version": "0.0.1",
-  "dependencies": {
-    "math": "0.0.3"
+  "name": "day01",
+  "version": "1.0.0",
+  "description": "",
+  "main": "01_helloNode.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "react": "^15.6.2"
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "math": "^0.0.3"
   }
 }
