--- a/NodeJS/day01/package.json
+++ b/NodeJS/day01/package.json
@@ -1,1 +1,15 @@
-呵呵呵呵哒
+{
+  "name": "day01",
+  "version": "1.0.0",
+  "description": "",
+  "main": "01_helloNode.js",
+  "dependencies": {
+    "math": "^0.0.3"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
+}
