--- a/NodeJS/day03/exec/package.json
+++ b/NodeJS/day03/exec/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.1.2"
+    "mongoose": "^5.1.2",
+    "sha1": "^1.1.1"
   }
 }
